Fixed issues throughout code.

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
 		"ext-curl":           "*",
 		"kriswallsmith/buzz": ">=0.7"
 	},
+    "require-dev": {
+	    "mockery/mockery": ">=0.7.2"
+    },
 	"autoload": {
 		"psr-0": {"GetNinja\\GoogleAnalytics": "src/"}
 	},
